[gd_scene load_steps=6 format=2]

[ext_resource path="res://Fonts/Oxanium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Fonts/Montserrat-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/DeathScreen.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 150
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 2 )

[node name="DeathScreen" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 25.0
margin_top = 35.0
margin_right = -25.0
margin_bottom = -35.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 1870.0
margin_bottom = 1010.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 1870.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 1 )
text = "You Died!"
align = 1
valign = 1

[node name="VSplitContainer" type="VSplitContainer" parent="VBoxContainer"]
margin_top = 155.0
margin_right = 1870.0
margin_bottom = 830.0
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 834.0
margin_right = 1870.0
margin_bottom = 1010.0

[node name="Play" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_right = 1870.0
margin_bottom = 56.0
custom_fonts/font = SubResource( 2 )
text = "Play Again!"
flat = true

[node name="Main Menu" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 1870.0
margin_bottom = 116.0
custom_fonts/font = SubResource( 2 )
text = "Main Menu"
flat = true

[node name="Quit" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_top = 120.0
margin_right = 1870.0
margin_bottom = 176.0
custom_fonts/font = SubResource( 2 )
text = "Quit"
flat = true
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
